--- a/app/scripts/templates/vhost.template
+++ b/app/scripts/templates/vhost.template
@@ -3,7 +3,7 @@
   DocumentRoot "/var/www"
   <Directory "/var/www">
     Options Indexes FollowSymLinks
-    AllowOverride All
+    AllowOverride None
     Order allow,deny
     Allow from all
   </Directory>
