--- a/app/composer.json
+++ b/app/composer.json
@@ -7,7 +7,8 @@
         "behat/mink-selenium-driver": "*",
         "behat/mink-selenium2-driver": "*",
         "behat/mink-sahi-driver": "*",
-        "behat/mink-zombie-driver": "*"
+        "behat/mink-zombie-driver": "*",
+				"drupal/drupal-extension": "*"
     },
     "minimum-stability": "dev",
     "config": {
