--- a/app/composer.json
+++ b/app/composer.json
@@ -1,13 +1,14 @@
 {
     "require": {
         "behat/behat": "2.4.*@stable",
-				"behat/mink": "*",
+				"behat/mink": "1.4.*@stable",
 				"behat/mink-extension":"*",
         "behat/mink-goutte-driver": "*",
         "behat/mink-selenium-driver": "*",
         "behat/mink-selenium2-driver": "*",
         "behat/mink-sahi-driver": "*",
         "behat/mink-zombie-driver": "*",
+				"behat/symfony2-extension":"*",
 				"drupal/drupal-extension": "*"
     },
     "minimum-stability": "dev",
