--- a/app/downloads/composer.json
+++ b/app/downloads/composer.json
@@ -1,13 +1,13 @@
 {
     "require": {
         "behat/behat": "2.4.*@stable",
-				"behat/mink": "1.4.*@stable",
+				"behat/mink": "1.5.*@stable",
 				"behat/mink-extension":"*",
         "behat/mink-goutte-driver": "*",
         "behat/mink-selenium-driver": "*",
         "behat/mink-selenium2-driver": "*",
         "behat/mink-sahi-driver": "*",
-        "behat/mink-zombie-driver": "*",
+        "behat/mink-zombie-driver": "1.1.*",
 				"behat/symfony2-extension":"*",
 				"drupal/drupal-extension": "*"
     },
