--- a/app/downloads/composer.json
+++ b/app/downloads/composer.json
@@ -1,14 +1,14 @@
 {
     "require": {
-        "behat/behat": "2.4.*@stable",
-				"behat/mink": "1.5.*@stable",
-				"behat/mink-extension":"*",
+        "behat/behat": "*@stable",
+        "behat/mink": "*@stable",
+        "behat/mink-extension":"*",
         "behat/mink-goutte-driver": "*",
         "behat/mink-selenium-driver": "*",
         "behat/mink-selenium2-driver": "*",
         "behat/mink-sahi-driver": "*",
-				"behat/symfony2-extension":"*",
-				"drupal/drupal-extension": "*"
+        "behat/symfony2-extension":"*",
+	"drupal/drupal-extension": "*"
     },
     "minimum-stability": "dev",
     "config": {
