--- a/app/downloads/composer.json
+++ b/app/downloads/composer.json
@@ -1,17 +1,18 @@
 {
-    "require": {
-        "behat/behat": "*@stable",
-        "behat/mink": "*@stable",
-        "behat/mink-extension":"*",
-        "behat/mink-goutte-driver": "*",
-        "behat/mink-selenium-driver": "*",
-        "behat/mink-selenium2-driver": "*",
-        "behat/mink-sahi-driver": "*",
-        "behat/symfony2-extension":"*",
-	"drupal/drupal-extension": "*"
-    },
-    "minimum-stability": "dev",
-    "config": {
-        "bin-dir": "bin/"
-    }
+  "require": {
+    "behat/behat": "*@stable",
+    "behat/mink": "*@stable",
+    "behat/mink-extension":"*",
+    "behat/mink-goutte-driver": "*",
+    "behat/mink-selenium-driver": "*",
+    "behat/mink-selenium2-driver": "*",
+    "behat/mink-sahi-driver": "*",
+    "behat/symfony2-extension":"*",
+    "drupal/drupal-extension": "*",
+    "vipsoft/jira-extension": "*"
+  },
+  "minimum-stability": "dev",
+  "config": {
+    "bin-dir": "bin/"
+  }
 }
