--- a/app/scripts/templates/settings.template
+++ b/app/scripts/templates/settings.template
@@ -17,7 +17,7 @@ ini_set('session.use_only_cookies', 1);
 ini_set('session.use_trans_sid',    0);
 ini_set('url_rewriter.tags',        '');
 
-$base_url = 'BASEURL';
+//$base_url = 'BASEURL';
 
 //D6 DB config
 $db_url = 'mysqli://drupaluser@127.0.0.1/DBNAME';
