--- a/tests/example-jira/behat.yml
+++ b/tests/example-jira/behat.yml
@@ -29,3 +29,33 @@ default:
     name:               pretty,html
     parameters:
       output_path:    null,qms_behat_report.html
+
+test:
+  extensions:
+    Behat\MinkExtension\Extension:
+      base_url: http://qms.localhost
+      goutte: ~
+
+    Drupal\DrupalExtension\Extension:
+      blackbox: ~
+      drush:
+        alias: qms
+      text:
+        username_field: "E-mail"
+
+    VIPSoft\JiraExtension\Extension:
+      host: https://ikosltd.atlassian.net/
+      user: glynn.reid
+      password: delta221
+      jql: project="Quality Meat Scotland" AND status = "In Review" AND "Feature" is not EMPTY
+      status_on_pass: "In Review"
+      comment_on_pass: false
+      comment_on_fail: false
+      reopen_on_fail: false
+      feature_field: customfield_11301
+      cache_directory: cache
+
+  formatter:
+    name:               pretty,html
+    parameters:
+      output_path:    null,qms_behat_report.html
